--- a/views/footprint.ejs
+++ b/views/footprint.ejs
@@ -34,14 +34,14 @@
                 <!-- outdoor system  -->
                 <div class="card">
                     <div class="card-header">
-                    <h2>Total Footprint</h2>
+                    <h2> CO2 Footprint </h2>
                     </div>
                     <div class="card-body">
-                        <h5>For period <%=periodOfConsumption %> you produced <%= totalEmissions %>   ppm of CO2</h5> <!--na emfanizei ena prasino fullo an einai ok! -->
+                        <h5>Total CO2 produced:  <%= etotalEmissions + total %> ppm </h5> 
                         
                     </div>
                     <div class="d-grid gap-2 d-sm-block">
-                        <a href="total_info.html"><button class="set-alarm-btn btn btn-outline-success btn-md" type="button">more info</button></a>
+                        <a href=""><button class="set-alarm-btn btn btn-outline-success btn-md" type="button">more info</button></a>
                     </div>
                 </div>
             </div>
