--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,19 +14,18 @@
     <script src="https://kit.fontawesome.com/9ee398e75f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
     <section class="nav-section" id="title">
             <!-- Logo, Icon Bar -->
             <div>
                 <div class="my-logo"><b>WorldBreath</b></div>
                     <div class="icon-bar ">
                 
-                        <a href="/home" class="active"><i class="fa-solid fa-house"></i></a> 
-                        <a href="/dashboard"><i class="fa-solid fa-chart-simple"></i></a>
-                        <a href="/qrCode"><i class="fa-solid fa-qrcode"></i></a>
-                        <a href="/footprint"><i class="fa-solid fa-leaf"></i></a> 
-                        <a href="/profile"><i class="fa-solid fa-circle-user"></i></a>
-                        <a href="/logout" role="button"><i class="fa-solid fa-circle-user"></i></a> 
+                       <div><a href="/home" class="<%=active1%>"><i class="fa-solid fa-house"></i></a></div>  
+                        <div><a href="/dashboard"class="<%=active2%>"  ><i class="fa-solid fa-chart-simple"></i></a></div>
+                        <div><a href="/qrCode" class="<%=active3%>"><i class="fa-solid fa-qrcode"></i></a></div>
+                        <div><a href="/footprint" class="<%=active4%>"><i class="fa-solid fa-leaf"></i></a></div> 
+                        <!-- <div><a href="/profile" class="<%=active6%>"><i class="fa-solid fa-circle-user"></i></a></div> -->
+                        <div><a href="/logout" class="<%=active6%>"><i class="fa fa-sign-out" aria-hidden="true"></i></a> </div>
  
                     </div>
             </div>    
