--- a/views/worldBreath.ejs
+++ b/views/worldBreath.ejs
@@ -1,8 +1,12 @@
 <%- include("partials/fHeader") %>
 
+
+
+
 <div class="jumbotron centered">
   <div class="container">
-    <i class="fa-solid fa-earth-americas"></i>
+    <img src="https://st2.depositphotos.com/3487615/5750/v/450/depositphotos_57507159-stock-illustration-green-eco-friendly-house-logo.jpg" alt="green house" width="200" height="150" >
+    <!-- <i class="fa-solid fa-earth-americas"></i> -->
     <h1 class="display-3">WorldBreath</h1>
     <p class="lead">Improve your health, check your air quality!</p>
     <hr>
