--- a/public/css/fstyles.css
+++ b/public/css/fstyles.css
@@ -3,13 +3,19 @@ body {
   }
   
   .centered {
-      padding-top: 200px;
+      padding-top: 5rem;
       text-align: center;
   }
   
-  .secret-text {
+  h1{
+    padding-top: 5rem;
+  }
+  img{
+    border-radius: 50%;
+  }
+  /* .secret-text {
     text-align: center;
     font-size: 2rem;
     color: #fff;
     background-color: #000;
-  }
+  } */
