--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,7 @@ body {margin:0;}
 }
 
 .icon-bar a:hover {
-  background-color: #000;
+  color: #03422c;
 }
 
 .active {
@@ -26,7 +26,7 @@ body {margin:0;}
 
 /* logo worldbreath */
 .my-logo{
-	font-size: x-large;
+	font-size: xx-large;
   background-color: white;
   color: black;
   padding-left: 1em;
@@ -92,7 +92,7 @@ font-size: 1.5rem;
 /* add alarm page */
 
 .alarm-inputs{
-  width: 40px;
+  width: 8rem;
 }
 
 /* total co2 section */
@@ -104,23 +104,25 @@ font-size: 1.5rem;
   text-align: left;
   margin-top: 0rem;
   margin-bottom: 2rem;
+  padding-top: 5rem;
 }
 
 .totalFootprint{
-  width:fit-content;
+  /* width:fit-content; */
+  padding-left: 0;
 }
 
 
 /* graphs from  https://ourworldindata.org/co2/country/greece  */
 .graphEmissions{
   padding-top: 10rem;
-  margin-left: 70rem;  
+  margin-left: 65rem;  
 }
 
 
 
 .AqiWidget{
-  padding-top: 5rem;
+  padding-top: 7rem;
   padding-left: 90rem;
 
 }
@@ -156,9 +158,9 @@ font-size: 1.5rem;
 }
 
 
-/* dashboards section */
+/* dashboards/fireplace section */
 
 .eco2{
-  padding-top: 20rem;
-  padding-left: 10rem;
+  padding-top: 0rem;
+  padding-left: 0rem;
 }
