--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,12 +1,17 @@
-<%- include("partials/header") %>
+
+<%- include("partials/chart") %>
 
 <!-- <iframe class="graphEmissions"src="https://ourworldindata.org/grapher/annual-co2-emissions-per-country?time=1750..1967&country=~GRC" loading="lazy" style="width: 40%; height: 600px; border: 10px none;"></iframe> -->
 
 
-<div class="eco2">
+<!-- <div class="eco2">
     <iframe style="background: #21313C;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);" width="640" height="480" src="https://charts.mongodb.com/charts-project-0-cpnpy/embed/charts?id=6298e6dc-0603-4de6-85ff-f47b0e7a5d8e&maxDataAge=10&theme=dark&autoRefresh=true"></iframe>
-</div>
+</div> -->
+
+<!-- chart example -->
+
+ 
 
 
-
+    
 <%- include("partials/footer") %> 
