final with qrcodes

--- a/views/qrCode.ejs
+++ b/views/qrCode.ejs
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <!-- <img src="../images/living-roomQR.png" style="width:200px;height:200px" alt="indoor Sensors values"> -->
 
-                    <img src="../images/living-roomQR.png" style="width:150px;height:150px;" alt="indoor Sensors values">
+                    <img src="../images/qrcode_guest.png" style="width:150px;height:150px;" alt="indoor Sensors values">
 
                 </div>
                 
@@ -33,7 +33,7 @@
                 <h2>Fireplace</h2>
                 </div>
                 <div class="card-body">
-                    <img src="../images/fireplaceQR.png" style="width:150px;height:150px;" alt="outdoor Sensors values">
+                    <img src="../images/qrcode_guest.png" style="width:150px;height:150px;" alt="outdoor Sensors values">
                     <!-- <img src="../images/fireplaceQR.png" style="width:200px;height:200px" alt="outdoor Sensors values"> -->
 
                 </div>
