--- a/views/setAlarm.ejs
+++ b/views/setAlarm.ejs
@@ -19,10 +19,10 @@
 
             <form action="/home/setAlarm" method="POST">    
 
-                <h3>CO2  : <span><input class="alarm-inputs" type="number" name="CO2Alarm"></span></h3> 
-                <h3>VOC  : <span><input class="alarm-inputs" type="number" name="VOCAlarm"></span></h3>
-                <h3>Hum  : <span><input class="alarm-inputs" type="number" name="HumAlarm"></span></h3>
-                <h3>Temp : <span><input class="alarm-inputs" type="number" name="TempAlarm"></span></h3>
+                <h3>CO2  : <span><input class="alarm-inputs" type="number" name="CO2Alarm" required></span></h3> 
+                <h3>VOC  : <span><input class="alarm-inputs" type="number" name="VOCAlarm" required></span></h3>
+                <h3>Hum  : <span><input class="alarm-inputs" type="number" name="HumAlarm" required></span></h3>
+                <h3>Temp : <span><input class="alarm-inputs" type="number" name="TempAlarm" required></span></h3>
                 <div class="d-grid gap-2 d-sm-block">
                     <button class="set-alarm-btn btn btn-outline-success btn-lg" type="submit">Check</button>
                 </div>
@@ -39,8 +39,8 @@
                 </div>
                 <div class="card-body">
                 <form action="/home/setAlarm" method="POST">
-                    <h3>CO2 : <span><input class="alarm-inputs" type="number" name="Co2OutdoorAlarm"></span></h3>  <!--isws valw to status na vgainei me vash to AQI kai to AQI na fygei -->
-                    <h3>VOC : <span><input class="alarm-inputs" type="number" name="VOCOutdoorAlarm"></span></h3>
+                    <h3>CO2 : <span><input class="alarm-inputs" type="number" name="Co2OutdoorAlarm" required></span></h3>  <!--isws valw to status na vgainei me vash to AQI kai to AQI na fygei -->
+                    <h3>VOC : <span><input class="alarm-inputs" type="number" name="VOCOutdoorAlarm" required></span></h3>
                     <h3 class="invisible"><span><input class="alarm-inputs" type="text"></span>invisible text</h3>
                     <h3 class="invisible"><span><input class="alarm-inputs" type="text"></span>invisible text</h3>
                     <div class="d-grid gap-2 d-sm-block">
